# mobile_manip_ws

./: .gitignore  README.md
doc/: apriltag.md  dingo_setup.md  install.md  install_gzweb.md  jupyterhub.md  start_remote_simulation.md  subtree_usage.md
docker/: dingo_arenasim.sh  gen3_lite_dingo_emptysim.sh  gen3_lite_dingo_labsim.sh  gen3_lite_sim.sh  readme.md  set_container_state.sh
docker/setup/: Dockerfile  entry_point.sh  setup_build.sh  setup_download.sh
scripts/: README.md  add_remotes.sh  addhosts.sh  build_real.sh  remote_dingo.sh  start_gzweb.sh  start_remoteviz.sh
scripts/users_mgt/: .bashrc  clean_user.sh  config_user.sh  copytoall.sh  create_users.sh  remove_users.sh
src/common_gazebo_models/: CMakeLists.txt  package.xml
src/common_gazebo_models/launch/: example.launch
src/common_gazebo_models/meshes/handheld_sensors_mount/: handheld_sensors_mount.dae  handheld_sensors_mount.stl
src/common_gazebo_models/urdf/: handheld_sensors_mount.urdf.xacro  lidar_mount.urdf.xacro  realsense_mount.urdf.xacro  turret.urdf.xacro
src/dingo/: README.md
src/dingo/dingo_control/: CHANGELOG.rst  package.xml
src/dingo/dingo_description/: CHANGELOG.rst  package.xml
src/dingo/dingo_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/dingo/dingo_navigation/: CHANGELOG.rst  package.xml
src/dingo_robot/: README.md
src/dingo_robot/dingo_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/dingo_robot/dingo_base/config/: diagnostic_analyzers_common.yaml  diagnostic_analyzers_diff.yaml  diagnostic_analyzers_omni.yaml  motors-mmp-s14.yaml
src/dingo_robot/dingo_base/include/dingo_base/: dingo_cooling.h  dingo_diagnostic_updater.h  dingo_hardware.h  dingo_lighting.h  dingo_logger.h  dingo_power_levels.h
src/dingo_robot/dingo_base/launch/: base.launch
src/dingo_robot/dingo_base/scripts/: calibrate_compass
src/dingo_robot/dingo_base/src/: dingo_base.cpp  dingo_cooling.cpp  dingo_diagnostic_updater.cpp  dingo_hardware.cpp  dingo_lighting.cpp  dingo_logger.cpp
src/dingo_robot/dingo_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/dingo_robot/dingo_bringup/launch/: accessories.launch
src/dingo_robot/dingo_bringup/scripts/: can-udp-bridge.sh  install  set-dingo-o
src/dingo_robot/dingo_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/mobile_manip/: CMakeLists.txt  package.xml
src/mobile_manip/config/: calibration_odometry.json  dingo_control.yaml  dingo_custom_controller_plugins.xml  door_position_controllers.yaml  jackal_control.yaml  jackal_control_tf.yaml  jackal_teleop.yaml  joint_position_controllers_gripper.yaml  settings.yaml  tags.yaml
src/mobile_manip/include/gazebo_plugins/: gazebo_panel_plugin.h
src/mobile_manip/launch/: dingo_arenasim.launch  gen3_lite_dingo_emptysim.launch  gen3_lite_dingo_labsim.launch  gen3_lite_dingo_real.launch  gen3_lite_real.launch  gen3_lite_sim.launch  rviz.launch
src/mobile_manip/launch/include/: amcl.launch  amcl_rviz.launch  apriltag_continuous_detection.launch  dingo_control.launch  dingo_description.launch  dingo_teleop.launch  kortex_move_group.launch  kortex_planning_context.launch  odom_navigation_demo.launch  realsense_occupancy.launch  rs_d400_and_t265.launch  rs_d435i.launch  rs_t265.launch  spawn_dingo.launch  spawn_door.launch  spawn_kortex_robot.launch
src/mobile_manip/maps/: a2230_map_closed.yaml
src/mobile_manip/models/A2230_arena/: model.config  model.sdf
src/mobile_manip/models/april_tags/Apriltag36_11_00000/: model.sdf
src/mobile_manip/models/april_tags/Apriltag36_11_00000/materials/scripts/: Apriltag.material
src/mobile_manip/models/april_tags/Apriltag36_11_00001/: model.sdf
src/mobile_manip/models/april_tags/Apriltag36_11_00002/: model.sdf
src/mobile_manip/models/april_tags/Apriltag36_11_00003/: model.sdf
src/mobile_manip/models/april_tags/Apriltag36_11_00006/: model.sdf
src/mobile_manip/models/april_tags/Apriltag36_11_00007/: model.sdf
src/mobile_manip/models/april_tags/Apriltag36_11_00007/materials/scripts/: Apriltag.material
src/mobile_manip/models/april_tags/Apriltag36_11_00008/: model.sdf
src/mobile_manip/models/april_tags/Apriltag36_11_00009/: model.sdf
src/mobile_manip/models/apriltag_door/: model.sdf
src/mobile_manip/models/barrier/: model.config
src/mobile_manip/models/calibration_checkerboard/: calibration_checkerboard.sdf  model.config
src/mobile_manip/models/calibration_checkerboard/meshes/: calibration_checkerboard.dae
src/mobile_manip/models/my_ground_plane/: model.config  model.sdf
src/mobile_manip/models/my_ground_plane/materials/scripts/: my_ground_plane.material
src/mobile_manip/params/: costmap_common_params.yaml
src/mobile_manip/rviz/: amcl.rviz  dingo.rviz  moveit.rviz  pointcloud_w_occupancy.rviz
src/mobile_manip/scripts/: dingo_state_estimation.py  home_multiple_arm.py  move_it_trajectories.py  unpause_physics.py
src/mobile_manip/scripts/jackal_custom_filters/: ekf.py  ekf_test.py
src/mobile_manip/src/: dingo_custom_ros_controller.cpp
src/mobile_manip/src/gazebo_plugins/: gazebo_panel_plugin.cpp
src/mobile_manip/srv/: GetValues.srv  ReachName.srv  ReachValues.srv
src/mobile_manip/urdf/: dingo-d.urdf.xacro  dingo-d_745.urdf.xacro  dingo.gazebo  dingo_745.gazebo  dingo_gen3_lite.srdf.xacro  dingo_gen3_lite.urdf.xacro  dingo_realsense.urdf.xacro  dingo_realsense_745.urdf.xacro  door.urdf.xacro  kortex_robot_float.xacro  standalone_d435_t265.urdf.xacro
src/mobile_manip/worlds/: A_2230.world  dingo_arena.world  dingo_maze.world  gen3_lite_table.world
src/puma_motor_driver/: .travis.yml
src/puma_motor_driver/puma_motor_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/puma_motor_driver/puma_motor_msgs/: CHANGELOG.rst  package.xml
src/realsense_simulator/: CMakeLists.txt  package.xml
src/realsense_simulator/include/realsense_gazebo_plugin/: D435Plugin.h  gazebo_ros_d435.h  gazebo_ros_t265.h
src/realsense_simulator/src/: D435Plugin.cpp  gazebo_ros_d435.cpp  gazebo_ros_t265.cpp
src/realsense_simulator/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  _t265.gazebo.xacro  _t265.urdf.xacro
(+51 files in other folders)
