<?xml version="1.0"?>
<package format="2">
  <name>mobile_manip</name>
  <version>1.0.0</version>
  <description>The mobile_manip package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="david.st-onge@etsmtl.ca">David St-Onge</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jackal_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <depend>controller_interface</depend>
  <depend>nav_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>
  <depend>pluginlib</depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>jackal_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/config/dingo_custom_controller_plugins.xml"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/april_tags"/>
    <gazebo_ros gazebo_media_path="${prefix}/models/april_tags"/>
  </export>
</package>
