<?xml version="1.0"?>
<package format="2">
  <name>dingo_base</name>
  <version>0.1.3</version>
  <description>Dingo's mobility and sensor base.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <author email="tbaltovski@clearpathrobotics.com">Tony Baltovski</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>

  <depend>controller_manager</depend>
  <depend>diagnostic_updater</depend>
  <depend>dingo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>puma_motor_msgs</depend>
  <depend>puma_motor_driver</depend>
  <depend>realtime_tools</depend>
  <depend>rosserial_server</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>dingo_control</exec_depend>
  <exec_depend>dingo_description</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>

  <export>
  </export>
</package>
